// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin should return source 1`] = `
Object {
  "cron": "0 * * * *",
  "enabled": false,
  "harvestMode": "allAtOnce",
  "id": "b28f6394-6efa-11e7-8661-c72f46e0289f",
  "name": "Galicia",
  "script": "galicia",
  "url": "http://ya.ru",
}
`;

exports[`anonymous shall not pass 1`] = `
Object {
  "data": Object {
    "source": null,
  },
  "errors": Array [
    [GraphQLError: You must be logged in to do this],
  ],
}
`;

exports[`superadmin should return source 1`] = `
Object {
  "cron": "0 * * * *",
  "enabled": false,
  "harvestMode": "allAtOnce",
  "id": "b28f6394-6efa-11e7-8661-c72f46e0289f",
  "name": "Galicia",
  "script": "galicia",
  "url": "http://ya.ru",
}
`;

exports[`user shall not pass 1`] = `
Object {
  "data": Object {
    "source": null,
  },
  "errors": Array [
    [GraphQLError: You are not allowed to do this],
  ],
}
`;
